--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cross-env": "^7.0.3",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "feather-icons": "4.25.x",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1"
