--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "cross-env DEBUG=notes:* node ./app.mjs"
   },
   "dependencies": {
+    "@mui/material": "^5.15.2",
     "bootstrap": "4.5.x",
     "cookie-parser": "~1.4.4",
     "cross-env": "^7.0.3",
