--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "feather-icons": "4.25.x",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "materialize-css": "^1.0.0-rc.2",
     "morgan": "~1.9.1"
   }
 }
