--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "cross-env DEBUG=notes:* node ./app.mjs"
+    "start": "cross-env REQUEST_LOG_FILE=log4.txt REQUEST_LOG_FORMAT=common DEBUG=notes:* node ./app.mjs"
   },
   "dependencies": {
     "@mui/material": "^5.15.2",
@@ -16,6 +16,7 @@
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "materialize-css": "^1.0.0-rc.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "rotating-file-stream": "^3.2.1"
   }
 }
