--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "cross-env REQUEST_LOG_FILE=log4.txt REQUEST_LOG_FORMAT=common DEBUG=notes:* node ./app.mjs"
+    "fs-start": "cross-env REQUEST_LOG_FILE=log4.txt REQUEST_LOG_FORMAT=common DEBUG=notes:* PORT=3000 NOTES_MODEL=fs node ./app.mjs",
+    "fs-server1": "cross-env NOTES_MODEL=fs PORT=3001 node ./app.mjs",
+"fs-server2": "cross-env NOTES_MODEL=fs PORT=3002 node ./app.mjs"
   },
   "dependencies": {
     "@mui/material": "^5.15.2",
     "bootstrap": "4.5.x",
+    "capture-console": "^1.0.2",
     "cookie-parser": "~1.4.4",
     "cross-env": "^7.0.3",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "feather-icons": "4.25.x",
+    "fs-extra": "^11.2.0",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "materialize-css": "^1.0.0-rc.2",
