--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "fs-start": "cross-env REQUEST_LOG_FILE=log4.txt REQUEST_LOG_FORMAT=common DEBUG=notes:* PORT=3000 NOTES_MODEL=fs node ./app.mjs",
     "fs-server1": "cross-env NOTES_MODEL=fs PORT=3001 node ./app.mjs",
-"fs-server2": "cross-env NOTES_MODEL=fs PORT=3002 node ./app.mjs"
+    "fs-server2": "cross-env NOTES_MODEL=fs PORT=3002 node ./app.mjs",
+    "level-start": " cross-env DEBUG=notes:* PORT=3000 NOTES_MODEL=level node ./app.mjs"
   },
   "dependencies": {
     "@mui/material": "^5.15.2",
@@ -19,6 +20,7 @@
     "fs-extra": "^11.2.0",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "level": "^6.0.1",
     "materialize-css": "^1.0.0-rc.2",
     "morgan": "~1.9.1",
     "rotating-file-stream": "^3.2.1"
