--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "fs-start": "cross-env REQUEST_LOG_FILE=log4.txt REQUEST_LOG_FORMAT=common DEBUG=notes:* PORT=3000 NOTES_MODEL=fs node ./app.mjs",
     "fs-server1": "cross-env NOTES_MODEL=fs PORT=3001 node ./app.mjs",
     "fs-server2": "cross-env NOTES_MODEL=fs PORT=3002 node ./app.mjs",
-    "level-start": " cross-env DEBUG=notes:* PORT=3000 NOTES_MODEL=level node ./app.mjs"
+    "level-start": " cross-env DEBUG=notes:* PORT=3000 NOTES_MODEL=level node ./app.mjs",
+    "sqlite3-setup": "sqlite3 chap07.sqlite3 --init models/schema-sqlite3.sql",
+    "sqlite3-start": "cross-env SQLITE_FILE=chap07.sqlite3  DEBUG=notes:* PORT=3000 NOTES_MODEL=sqlite3 node ./app.mjs",
+    "sqlite3-server1": "cross-env SQLITE_FILE=chap07.sqlite3 NOTES_MODEL=sqlite3 PORT=3001 node ./app.mjs",
+    "sqlite3-server2": "cross-env SQLITE_FILE=chap07.sqlite3 NOTES_MODEL=sqlite3 PORT=3002 node ./app.mjs"
   },
   "dependencies": {
     "@mui/material": "^5.15.2",
@@ -23,6 +27,7 @@
     "level": "^6.0.1",
     "materialize-css": "^1.0.0-rc.2",
     "morgan": "~1.9.1",
-    "rotating-file-stream": "^3.2.1"
+    "rotating-file-stream": "^3.2.1",
+    "sqlite3": "^5.1.7"
   }
 }
