--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "fs-extra": "^11.2.0",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "js-yaml": "3.13.x",
     "level": "^6.0.1",
     "materialize-css": "^1.0.0-rc.2",
     "morgan": "~1.9.1",
     "rotating-file-stream": "^3.2.1",
+    "sequelize": "^6.35.2",
     "sqlite3": "^5.1.7"
   }
 }
