--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "sqlite3-setup": "sqlite3 chap07.sqlite3 --init models/schema-sqlite3.sql",
     "sqlite3-start": "cross-env SQLITE_FILE=chap07.sqlite3  DEBUG=notes:* PORT=3000 NOTES_MODEL=sqlite3 node ./app.mjs",
     "sqlite3-server1": "cross-env SQLITE_FILE=chap07.sqlite3 NOTES_MODEL=sqlite3 PORT=3001 node ./app.mjs",
-    "sqlite3-server2": "cross-env SQLITE_FILE=chap07.sqlite3 NOTES_MODEL=sqlite3 PORT=3002 node ./app.mjs"
+    "sqlite3-server2": "cross-env SQLITE_FILE=chap07.sqlite3 NOTES_MODEL=sqlite3 PORT=3002 node ./app.mjs",
+    "sequelize-start": "cross-env DEBUG=Notes:* SEQUELIZE_CONNECT=models/sequelize-sqlite.yaml NOTES_MODEL=sequelize node ./app.mjs",
+    "sequelize-server1": "cross-env SEQUELIZE_CONNECT=models/sequelize-sqlite.yaml NOTES_MODEL=sequelize PORT=3001 node ./app.mjs",
+    "sequelize-server2": "cross-env SEQUELIZE_CONNECT=models/sequelize-sqlite.yaml NOTES_MODEL=sequelize PORT=3002 node ./app.mjs"
   },
   "dependencies": {
     "@mui/material": "^5.15.2",
@@ -28,6 +31,7 @@
     "level": "^6.0.1",
     "materialize-css": "^1.0.0-rc.2",
     "morgan": "~1.9.1",
+    "mysql": "^2.18.1",
     "rotating-file-stream": "^3.2.1",
     "sequelize": "^6.35.2",
     "sqlite3": "^5.1.7"
