--- a/models/sequelize-sqlite.yaml
+++ b/models/sequelize-sqlite.yaml
@@ -8,8 +8,8 @@ dbname: notes
 username: 
 password: 
 params: 
-    dialect: sqlite 
-    storage: notes-sequelize.sqlite3
+    dialect: msnodesqlv8
+    
     
 
 
