--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "sqlite3-setup": "sqlite3 chap07.sqlite3 --init models/schema-sqlite3.sql",
     "sqlite3-start": "cross-env SQLITE_FILE=chap07.sqlite3  DEBUG=notes:* PORT=3000 NOTES_MODEL=sqlite3 node ./app.mjs",
     "sqlite3-server1": "cross-env SQLITE_FILE=chap07.sqlite3 NOTES_MODEL=sqlite3 PORT=3001 node ./app.mjs",
-    "sqlite3-server2": "cross-env SQLITE_FILE=chap07.sqlite3 NOTES_MODEL=sqlite3 PORT=3002 node ./app.mjs"
+    "sqlite3-server2": "cross-env SQLITE_FILE=chap07.sqlite3 NOTES_MODEL=sqlite3 PORT=3002 node ./app.mjs",
+    "mongodb-start": "cross-env DEBUG=notes:* MONGO_URL=mongodb://localhost:27017/ MONGO_DBNAME=chap07 NOTES_MODEL=mongodb node ./app.mjs",
+    "mongodb-server1": "cross-env DEBUG=notes:* MONGO_URL=mongodb://localhost:27017/ MONGO_DBNAME=chap07 NOTES_MODEL=mongodb PORT=3001 node ./app.mjs",
+    "mongodb-server2": "cross-env DEBUG=notes:* MONGO_URL=mongodb://localhost:27017/ MONGO_DBNAME=chap07 NOTES_MODEL=mongodb PORT=3002 node ./app.mjs"
+
   },
   "dependencies": {
     "@mui/material": "^5.15.2",
@@ -26,6 +30,7 @@
     "http-errors": "~1.6.3",
     "level": "^6.0.1",
     "materialize-css": "^1.0.0-rc.2",
+    "mongodb": "^3.7.4",
     "morgan": "~1.9.1",
     "rotating-file-stream": "^3.2.1",
     "sqlite3": "^5.1.7"
