--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "js-yaml": "3.13.x",
     "level": "^6.0.1",
     "materialize-css": "^1.0.0-rc.2",
+    "mongodb": "^3.7.4",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "rotating-file-stream": "^3.2.1",
