--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "mongodb-start": "cross-env DEBUG=notes:* MONGO_URL=mongodb://localhost:27017/ MONGO_DBNAME=chap07 NOTES_MODEL=mongodb node ./app.mjs",
     "mongodb-server1": "cross-env DEBUG=notes:* MONGO_URL=mongodb://localhost:27017/ MONGO_DBNAME=chap07 NOTES_MODEL=mongodb PORT=3001 node ./app.mjs",
     "mongodb-server2": "cross-env DEBUG=notes:* MONGO_URL=mongodb://localhost:27017/ MONGO_DBNAME=chap07 NOTES_MODEL=mongodb PORT=3002 node ./app.mjs"
-
   },
   "dependencies": {
     "@mui/material": "^5.15.2",
@@ -39,6 +38,7 @@
     "mysql": "^2.18.1",
     "rotating-file-stream": "^3.2.1",
     "sequelize": "^6.35.2",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "superagent": "^5.3.1"
   }
 }
