--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "mongodb": "^3.7.4",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "rotating-file-stream": "^3.2.1",
     "sequelize": "^6.35.2",
     "sqlite3": "^5.1.7",
